<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchWrap">

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray" />

        <TextView
            android:id="@+id/item_popupwindows_camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:gravity="center"
            android:text="@string/text_phonto_camero"
            android:textSize="@dimen/text_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray" />

        <TextView
            android:id="@+id/item_popupwindows_Photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:gravity="center"
            android:text="@string/text_phonto_picture"
            android:textSize="@dimen/text_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray" />

        <TextView
            android:id="@+id/item_popupwindows_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:gravity="center"
            android:text="@string/text_cancel"
            android:textSize="@dimen/text_18" />
    </LinearLayout>

</LinearLayout>