<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yyjlr.tickets.activity.setting.UpdatePasswordActivity"
    tools:showIn="@layout/activity_update_password">

    <LinearLayout
        style="@style/MatchWrap"
        android:layout_marginTop="@dimen/size_20"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <TextView
            style="@style/WrapWrap"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/text_find_pwd_old"
            android:textColor="@color/gray_929292"
            android:textSize="@dimen/text_14" />

        <EditText
            android:id="@+id/content_update__old_pwd"
            style="@style/AutoMatch"
            android:layout_marginLeft="@dimen/size_30"
            android:background="@null"
            android:gravity="center|left"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black_363636"
            android:textSize="@dimen/text_14" />
    </LinearLayout>

    <LinearLayout
        style="@style/MatchWrap"
        android:layout_marginTop="0.5dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <TextView
            style="@style/WrapWrap"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/text_find_pwd_new"
            android:textColor="@color/gray_929292"
            android:textSize="@dimen/text_14" />

        <EditText
            android:id="@+id/content_update__new_pwd"
            style="@style/AutoMatch"
            android:layout_marginLeft="31dp"
            android:background="@null"
            android:gravity="center|left"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black_363636"
            android:textSize="@dimen/text_14" />
    </LinearLayout>

    <LinearLayout
        style="@style/MatchWrap"
        android:layout_marginTop="0.5dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <TextView
            style="@style/WrapWrap"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/text_find_pwd_new_confirm"
            android:textColor="@color/gray_929292"
            android:textSize="@dimen/text_14" />

        <EditText
            android:id="@+id/content_update__reset_pwd"
            style="@style/AutoMatch"
            android:layout_marginLeft="19dp"
            android:background="@null"
            android:gravity="center|left"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black_363636"
            android:textSize="@dimen/text_14" />
    </LinearLayout>

    <Button
        android:id="@+id/content_update__confirm"
        style="@style/MatchWrap"
        android:layout_marginLeft="@dimen/size_30"
        android:layout_marginRight="@dimen/size_30"
        android:layout_marginTop="@dimen/size_30"
        android:background="@drawable/radius_blue_4"
        android:text="@string/text_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_15" />
</LinearLayout>