<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yyjlr.tickets.activity.FindPasswordActivity"
    tools:showIn="@layout/activity_find_password">

    <LinearLayout
        style="@style/MatchWrap"
        android:layout_marginTop="@dimen/size_20"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <TextView
            style="@style/WrapWrap"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/size_10"
            android:padding="5dp"
            android:text="@string/text_phone"
            android:textSize="@dimen/text_14"
            android:textColor="@color/gray_929292"/>

        <EditText
            android:id="@+id/content_find_pwd__phone"
            style="@style/AutoMatch"
            android:layout_marginLeft="@dimen/size_5"
            android:background="@null"
            android:gravity="center|left"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textSize="@dimen/text_14"
            android:textColor="@color/black_363636"/>
    </LinearLayout>

    <LinearLayout
        style="@style/MatchWrap"
        android:layout_marginBottom="@dimen/size_20"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_10"
        android:paddingLeft="@dimen/size_10"
        android:paddingTop="@dimen/size_10">

        <TextView
            style="@style/WrapWrap"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/size_10"
            android:padding="5dp"
            android:text="@string/text_code"
            android:textSize="@dimen/text_14"
            android:textColor="@color/gray_929292"/>

        <EditText
            android:id="@+id/content_find_pwd__code"
            style="@style/AutoMatch"
            android:layout_marginLeft="@dimen/size_5"
            android:background="@null"
            android:gravity="center|left"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textSize="@dimen/text_14"
            android:textColor="@color/black_363636"/>

        <com.yyjlr.tickets.viewutils.MaterialRippleLayout
            style="@style/WrapWrap"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/bg_shadow"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/content_find_pwd__getcode"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_30"
                android:background="@drawable/left_circle_orange_alpha_6"
                android:text="@string/text_get_code"
                android:textColor="@color/white"
                android:textSize="@dimen/text_13" />
        </com.yyjlr.tickets.viewutils.MaterialRippleLayout>
    </LinearLayout>


    <com.yyjlr.tickets.viewutils.MaterialRippleLayout
        style="@style/MatchWrap"
        android:layout_margin="@dimen/size_20"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/bg_shadow"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <Button
            android:id="@+id/content_find_pwd__next"
            style="@style/MatchWrap"
            android:background="@drawable/radius_blue_4"
            android:padding="@dimen/size_10"
            android:text="@string/text_next"
            android:textColor="@color/white"
            android:textSize="@dimen/text_15" />
    </com.yyjlr.tickets.viewutils.MaterialRippleLayout>
</LinearLayout>