<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yyjlr.tickets.activity.ResetPasswordActivity"
    tools:showIn="@layout/activity_reset_password">


    <LinearLayout
        style="@style/MatchWrap"
        android:layout_marginTop="@dimen/size_10"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <TextView
            style="@style/WrapWrap"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/size_10"
            android:padding="5dp"
            android:text="@string/text_password"
            android:textColor="@color/gray_929292"
            android:textSize="@dimen/text_14" />

        <EditText
            android:id="@+id/content_reset_pwd__password"
            style="@style/AutoMatch"
            android:layout_marginLeft="@dimen/size_20"
            android:background="@null"
            android:gravity="center|left"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black_363636"
            android:textSize="@dimen/text_14" />
    </LinearLayout>

    <LinearLayout
        style="@style/MatchWrap"
        android:layout_marginBottom="@dimen/size_20"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <TextView
            style="@style/WrapWrap"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/text_confirm_password"
            android:textColor="@color/gray_929292"
            android:textSize="@dimen/text_14" />

        <EditText
            android:id="@+id/content_reset_pwd__confirm_password"
            style="@style/AutoMatch"
            android:layout_marginLeft="@dimen/size_5"
            android:background="@null"
            android:gravity="center|left"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black_363636"
            android:textSize="@dimen/text_14" />
    </LinearLayout>

    <Button
        android:id="@+id/content_reset_pwd__confirm"
        style="@style/MatchWrap"
        android:layout_margin="@dimen/size_20"
        android:background="@drawable/radius_blue_4"
        android:padding="@dimen/size_10"
        android:text="@string/text_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_15" />
</LinearLayout>