<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_follow_grab__layout"
    style="@style/MatchWrap"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_100"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_10"
        android:paddingLeft="@dimen/padding_20"
        android:paddingRight="@dimen/padding_20"
        android:paddingTop="@dimen/padding_10">

        <ImageView
            android:id="@+id/item_follow_grab__image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_follow_grab__name"
                style="@style/WrapWrap"
                android:layout_marginBottom="@dimen/magin_5"
                android:layout_marginLeft="@dimen/magin_10"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/black_alpha"
                android:textSize="@dimen/text_14" />

            <LinearLayout
                style="@style/MatchWrap"
                android:layout_marginLeft="@dimen/magin_10"
                android:orientation="horizontal">

                <TextView
                    style="@style/WrapWrap"
                    android:text="@string/text_time"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_12" />

                <TextView
                    android:id="@+id/item_follow_grab__time"
                    style="@style/WrapWrap"
                    android:textColor="@color/black_alpha"
                    android:textSize="@dimen/text_12" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWrap"
                android:layout_marginLeft="@dimen/magin_10"
                android:orientation="horizontal">

                <TextView
                    style="@style/WrapWrap"
                    android:text="@string/text_address"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_12" />

                <TextView
                    android:id="@+id/item_follow_grab__address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/black_alpha"
                    android:textSize="@dimen/text_12" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWrap"
                android:layout_marginLeft="@dimen/magin_10"
                android:orientation="horizontal">

                <TextView
                    style="@style/WrapWrap"
                    android:text="@string/text_price"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_12" />

                <TextView
                    android:id="@+id/item_follow_grab__price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_alpha"
                    android:textSize="@dimen/text_12" />
            </LinearLayout>
        </LinearLayout>

        <com.yyjlr.tickets.viewutils.MaterialRippleLayout
            style="@style/WrapWrap"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/bg_shadow"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <TextView
                android:id="@+id/item_follow_grab__enter"
                android:layout_width="@dimen/height_60"
                android:layout_height="@dimen/height_30"
                android:background="@drawable/selector_btn_blue"
                android:gravity="center"
                android:text="@string/text_enter"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </com.yyjlr.tickets.viewutils.MaterialRippleLayout>
    </LinearLayout>

    <View
        style="@style/MatchOne"
        android:background="@color/gray" />
</LinearLayout>